src/test/ui/generator/borrowing.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/borrowing.rs:9:33
   |
LL |         Pin::new(&mut || yield &a).resume()
   |                       ----------^
   |                       |         |
   |                       |         borrowed value does not live long enough
   |                       value captured here by generator
   |                       a temporary with access to the borrow is created here ...
LL |
LL |     };
   |     -- ... and the borrow might be used here, when that temporary is dropped and runs the destructor for generator
   |     |
   |     `a` dropped here while still borrowed
   |
   = note: The temporary is part of an expression at the end of a block. Consider forcing this temporary to be dropped sooner, before the block's local variables are dropped. For example, you could save the expression's value in a new local variable `x` and then make `x` be the expression at the end of the block.

error[E0597]: `a` does not live long enough
  --> $DIR/borrowing.rs:16:20
   |
LL |     let _b = {
   |         -- borrow later stored here
LL |         let a = 3;
LL |         || {
   |         -- value captured here by generator
LL |             yield &a
   |                    ^ borrowed value does not live long enough
...
LL |     };
   |     - `a` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
